[package]
name = "filetravel_backend"
version = "0.1.0"
edition = "2021"

[dependencies]

futures = "0.3.30"
tokio = {version = "^1.39.2",features=["full","macros"]}
tower = "0.4.13"
axum = "0.7.5"
serde = {version="1.0.204",features=["derive"]}
tower-http = {version="0.5.2",features=["fs"]}
chrono = "0.4.38"

