[package]
name = "filetravel_backend"
version = "0.1.0"
edition = "2021"

[dependencies]


futures = "0.3.30"
tokio = { version = "^1.39.2", features = ["full", "macros"] }
tower = "0.4.13"
axum = { version = "0.7.5", features = ["macros", "multipart","ws","default"] }
http-body = "1.0.1"
futures-core = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "fast-rng", "v4"] }
rand = "0.8.5"
tokio-util = { version = "0.7.11",features = ["io"] }
headers = "0.4.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
tracing = "0.1.40"
serde_json = "1.0.120"
time = "0.3.36"
